# tf-projection-qm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/tensorflow_projection_qm/: pipeline.py
src/tensorflow_projection_qm/metrics/: __init__.py  avg_local_error.py  continuity.py  distance_consistency.py  jaccard.py  mean_rel_rank_error.py  metric.py  neighborhood_hit.py  neighbors.py  pearson_correlation.py  procrustes.py  shepard_goodness.py  stress.py  trustworthiness.py
src/tensorflow_projection_qm/util/: distance.py
test/util/: test_distance.py
tests/: conftest.py
tests/metrics/: test_class_aware_continuity.py  test_class_aware_trustworthiness.py  test_continuity.py  test_trustworthiness.py
