[tool.poetry]
name = "tensorflow-projection-qm"
version = "0.1.0"
description = "A package with fast, TensorFlow-based implementations of projection (i.e., dimensionality reduction) quality metrics."
authors = ["Alister Machado <alister.reis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
