[tool.poetry]
name = "tensorflow-projection-qm"
version = "0.1.0"
description = "A package with fast, TensorFlow-based implementations of projection (i.e., dimensionality reduction) quality metrics."
authors = ["Alister Machado <alister.reis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
numpy = ">=1.24,<2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
scikit-learn = "^1.5.1"
types-tensorflow = "^2.17.0.20240820"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
