[project]
name = "tensorflow-projection-qm"
version = "0.3.0.post1"
authors = [{ name = "Alister Machado", email = "alister.reis@gmail.com" }]
description = "A package with fast, TensorFlow-based implementations of projection (i.e., dimensionality reduction) quality metrics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2",
    "scipy>=1.13.1",
    "tensorflow>=2.15; python_version < '3.12'",
    "tensorflow>=2.17; python_version >= '3.12'",
    "tensorflow>=2.20; python_version >= '3.13'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "projection",
    "dimensionality reduction",
    "quality metrics",
    "data visualization",
    "visualization",
]
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/amreis/tf-projection-qm"
Homepage = "https://github.com/amreis/tf-projection-qm"

[tool.uv]
resolution = "lowest-direct"

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "scikit-learn>=1.5",
    "tensorboard-plugin-profile==2.17.0",
]

[project.optional-dependencies]
and-cuda = [
    "tensorflow[and-cuda]>=2.15; python_version < '3.12'",
    "tensorflow[and-cuda]>=2.17; python_version >= '3.12'",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["NPY201"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
